; ModuleID = '/home/carl/AnghaBench/redis/src/extr_t_zset.c_zzlDeleteRangeByRank.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_t_zset.c_zzlDeleteRangeByRank.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @zzlDeleteRangeByRank(i8* %0, i32 %1, i32 %2, i64* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i64* %3, i64** %8, align 8
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* %6, align 4
  %12 = sub i32 %10, %11
  %13 = add i32 %12, 1
  store i32 %13, i32* %9, align 4
  %14 = load i64*, i64** %8, align 8
  %15 = icmp ne i64* %14, null
  br i1 %15, label %16, label %20

16:                                               ; preds = %4
  %17 = load i32, i32* %9, align 4
  %18 = zext i32 %17 to i64
  %19 = load i64*, i64** %8, align 8
  store i64 %18, i64* %19, align 8
  br label %20

20:                                               ; preds = %16, %4
  %21 = load i8*, i8** %5, align 8
  %22 = load i32, i32* %6, align 4
  %23 = sub i32 %22, 1
  %24 = mul i32 2, %23
  %25 = load i32, i32* %9, align 4
  %26 = mul i32 2, %25
  %27 = call i8* @ziplistDeleteRange(i8* %21, i32 %24, i32 %26)
  store i8* %27, i8** %5, align 8
  %28 = load i8*, i8** %5, align 8
  ret i8* %28
}

declare dso_local i8* @ziplistDeleteRange(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
